* refactored the whole functionality in regard with mobile viewing, notes reordering, and handling elements width issues * implemented note handlers for reordering notes on mobile * changed the details toggle buttons to switch btw dbl-down and dbl-up arrows * fixed alignment of notes elements (through elements rearrangement + css styles + js) for cases when the width is small (e.g. portrait view on phone)

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -91,6 +91,23 @@ label {
     filter: blur(15px);
 }
 
+.containerNoWrap {
+    white-space: nowrap;
+}
+
+.containerFloatLeft {
+    float: left;
+}
+
+.containerFloatRight {
+    float: right;
+}
+
+.containerFloatClear {
+    clear: left;
+    clear: right;
+}
+
 
 /* Notes elements */
 
@@ -129,6 +146,18 @@ label {
     color: #7a7a7a;
     font-size: 15px;
     min-height: 16px;
+}
+
+.sortableHandle {
+    float: right;
+    appearance: none;
+    -webkit-appearance: none;
+    outline: none;
+    border: 0;
+    background: transparent;
+    padding-left: 15px;
+    padding-right: 10px;
+    font-size: 16px;
 }
 
 .showDetails {
@@ -245,7 +274,6 @@ div .singleNoteDeleteHolder {
 }
 
 .checkDone {
-    float: left;
     appearance: none;
     -webkit-appearance: none;
     outline: none;
